<resources>
    <string name="app_name">AppImc</string>
    <string name="imc">IMC</string>
    <string name="tmb">TMB</string>
    <string name="weight">Peso (kg)</string>
    <string name="height">Altura (cm)</string>
    <string name="imc_desc">IMC é a sigla para Índice de Massa Corporal que serve para avaliar o peso do indivíduo em relação à sua altura e assim indicar se está dentro do peso ideal, acima ou abaixo do peso desejado.\n\nPreencha os campos de peso e altura para descobrir o seu IMC </string>
    <string name="calc">Calcular</string>
    <string name="important">Importate!!</string>
    <string name="fields_message">Verifique se os campos estão preenchidos.\nPrecisam ser diferentes de zero.</string>
    <string name="imc_severely_low_weight">Severamente abaixo do peso</string>
    <string name="imc_very_low_weight">Muito abaixo do peso</string>
    <string name="imc_low_weight">Abaixo do peso</string>
    <string name="normal">Normal</string>
    <string name="imc_high_weight">Acima do peso</string>
    <string name="imc_so_high_weight">Moderadamente obeso</string>
    <string name="imc_severely_high_weight">Severamente obeso</string>
    <string name="imc_extreme_weight">Extremamente obeso</string>
    <string name="imc_response">Imc: %1$.2f</string>
    <string name="save">Salvar</string>
    <string name="calc_saved">Registro salvo com sucesso</string>
    <string name="calc_removed">Registro removido com sucesso</string>
    <string name="search">Buscar</string>
    <string name="tmb_desc">TMB é o cálculo para descobrir a quantidade calórica que o corpo necessita com base no seu estilo de vida</string>
    <string name="age">Idade</string>
    <string name="tmb_response">Tmb: %1$.2f</string>
    <string name="delete_message">Você realmente quer excluir o registro?</string>
    <string name="cancel">Cancelar</string>
    <string name="calculadora_de_imc">Essa é a sua\n Calculadora de IMC</string>
    <string name="height_text">Altura</string>
    <string name="text_weight">Peso</string>
    <string name="text_age">Idade</string>
    <string name="man">Homem</string>
    <string name="women">Mulher</string>
    <string name="whats_your_name">Digite seu nome ?</string>
    <string name="calculate">Calcular</string>
    <string name="name_user">Nome User</string>
    <string name="recalculate">Novo Calculo de IMC</string>
    <string name="womenText">Mulher</string>
    <string name="manText">Homem</string>
    <string name="othersText">Outros</string>

</resources>