<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_dark"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_initial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:text="@string/calculadora_de_imc"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/view_ctn_01"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/container_componets"
        app:layout_constraintEnd_toStartOf="@id/view_ctn_02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_initial" />

    <ImageView
        android:id="@+id/item_img_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_men"
        app:layout_constraintBottom_toBottomOf="@id/textView"
        app:layout_constraintEnd_toEndOf="@+id/view_ctn_01"
        app:layout_constraintStart_toStartOf="@+id/view_ctn_01"
        app:layout_constraintTop_toTopOf="@+id/view_ctn_01" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manText"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_ctn_01"
        app:layout_constraintEnd_toEndOf="@+id/view_ctn_01"
        app:layout_constraintStart_toStartOf="@+id/view_ctn_01"
        app:layout_constraintTop_toBottomOf="@+id/item_img_icon" />

    <View
        android:id="@+id/view_ctn_02"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/container_componets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view_ctn_01"
        app:layout_constraintTop_toBottomOf="@id/txt_initial"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/item_img_icon2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_women"
        app:layout_constraintBottom_toBottomOf="@id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/view_ctn_02"
        app:layout_constraintStart_toStartOf="@+id/view_ctn_02"
        app:layout_constraintTop_toTopOf="@+id/view_ctn_02" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/womenText"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_ctn_02"
        app:layout_constraintEnd_toEndOf="@+id/view_ctn_02"
        app:layout_constraintStart_toStartOf="@+id/view_ctn_02"
        app:layout_constraintTop_toBottomOf="@+id/item_img_icon2" />

    <View
        android:id="@+id/view_ctn_03"
        android:layout_width="215dp"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/container_componets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_ctn_01" />

    <ImageView
        android:id="@+id/item_img_icon3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_others"
        app:layout_constraintBottom_toBottomOf="@id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/view_ctn_03"
        app:layout_constraintStart_toStartOf="@+id/view_ctn_03"
        app:layout_constraintTop_toTopOf="@+id/view_ctn_03" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/othersText"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_ctn_03"
        app:layout_constraintEnd_toEndOf="@+id/view_ctn_03"
        app:layout_constraintStart_toStartOf="@+id/view_ctn_03"
        app:layout_constraintTop_toBottomOf="@+id/item_img_icon3" />
</androidx.constraintlayout.widget.ConstraintLayout>